@@ -1,8 +1,9 @@
 # -*- coding: utf-8 -*-
 """
-graphicsWindows.py -  Convenience classes which create a new window with PlotWidget or ImageView.
-Copyright 2010  Luke Campagnola
-Distributed under MIT/X11 license. See license.txt for more infomation.
+DEPRECATED:  The classes below are convenience classes that create a new window
+containting a single, specific widget. These classes are now unnecessary because
+it is possible to place any widget into its own window by simply calling its
+show() method.
 """
 
 from .Qt import QtCore, QtGui
@@ -20,6 +21,8 @@ def mkQApp():
 
 class GraphicsWindow(GraphicsLayoutWidget):
     """
+    (deprecated; use GraphicsLayoutWidget instead)
+    
     Convenience subclass of :class:`GraphicsLayoutWidget 
     <pyqtgraph.GraphicsLayoutWidget>`. This class is intended for use from 
     the interactive python prompt.
@@ -34,6 +37,9 @@ class GraphicsWindow(GraphicsLayoutWidget):
         
 
 class TabWindow(QtGui.QMainWindow):
+    """
+    (deprecated)
+    """
     def __init__(self, title=None, size=(800,600)):
         mkQApp()
         QtGui.QMainWindow.__init__(self)
@@ -52,6 +58,9 @@ class TabWindow(QtGui.QMainWindow):
     
 
 class PlotWindow(PlotWidget):
+    """
+    (deprecated; use PlotWidget instead)
+    """
     def __init__(self, title=None, **kargs):
         mkQApp()
         self.win = QtGui.QMainWindow()
@@ -65,6 +74,9 @@ class PlotWindow(PlotWidget):
 
 
 class ImageWindow(ImageView):
+    """
+    (deprecated; use ImageView instead)
+    """
     def __init__(self, *args, **kargs):
         mkQApp()
         self.win = QtGui.QMainWindow()
