@@ -5,7 +5,8 @@ pyqtgraph-0.11.0 (in development)
       The result is visually the same, but children of ArrowItem are no longer rotated
       (this allows screen-aligned text to be attached more easily).
       To mimic the old behavior, use ArrowItem.rotate() instead of the `angle` argument.
-        
+    - Deprecated graphicsWindow classes; these have been unnecessary for many years because
+      widgets can be placed into a new window just by calling show().
 
 
 pyqtgraph-0.10.0
